--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
             <properties>
                 <!-- Optional URL to server. Default value is http://localhost:9000 -->
                 <sonar.host.url>
-                    http://18.191.154.53:9000/
+                  http://3.108.62.197:8081/
                 </sonar.host.url>
             </properties>
         </profile>
@@ -132,7 +132,7 @@
                 <plugin>
                     <groupId>org.sonarsource.scanner.maven</groupId>
                     <artifactId>sonar-maven-plugin</artifactId>
-                    <version>3.6.0.1398</version>
+                    <version>3.0.2-02</version>
                 </plugin>
                 <plugin>
                     <groupId>org.jacoco</groupId>
